Fix vertical height on Firefox too

--- a/packages/site/static/global.css
+++ b/packages/site/static/global.css
@@ -54,9 +54,9 @@ body {
 }
 
 #sapper {
-  height: 100%;
   display: flex;
   flex-flow: column;
+  overflow: hidden;
 }
 
 h1,
